// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extendedLinks для cars 1`] = `
<div
  className="ListingItem__extendedLabels"
>
  <Link
    className="ListingItem__extendedLabelsLink"
    key="year"
    target="_blank"
    url="link/dealer-page/?category=cars&dealer_code=salon-code&dealer_org_type=1&from=auto-snippet"
  >
    <IconSvg
      className="ListingItem__extendedLabelsIcon"
      id="svgID"
      size="24"
    />
    На Авто.ру 35 лет
  </Link>
</div>
`;

exports[`extendedLinks для moto 1`] = `
<div
  className="ListingItem__extendedLabels"
>
  <Link
    className="ListingItem__extendedLabelsLink"
    key="year"
    target="_blank"
    url="link/dealer-page/?category=MOTORCYCLE&dealer_code=salon-code&dealer_org_type=1&from=auto-snippet"
  >
    <IconSvg
      className="ListingItem__extendedLabelsIcon"
      id="svgID"
      size="24"
    />
    На Авто.ру 35 лет
  </Link>
</div>
`;

exports[`метрика для айтема с панорамой отправляется для внутренней панорамы, если нет внешней 1`] = `
Array [
  Array [
    "panorama-shows",
    "interior",
    "non-twisted",
  ],
]
`;

exports[`метрика для айтема с панорамой отправляется для элемента без вращения по скролу когда заголовок попадает в зону видимости 1`] = `
Array [
  Array [
    "panorama-shows",
    "exterior",
    "non-twisted",
  ],
]
`;

exports[`метрика для айтема с панорамой отправляется для элемента с вращением по скролу когда заголовок попадает в зону видимости 1`] = `
Array [
  Array [
    "panorama-shows",
    "exterior",
    "twisted",
  ],
]
`;
